[gd_scene load_steps=32 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://textures/Ninjagirl/Idle__000.tex" type="Texture" id=2]
[ext_resource path="res://textures/Ninjagirl/Idle__001.tex" type="Texture" id=3]
[ext_resource path="res://textures/Ninjagirl/Idle__002.tex" type="Texture" id=4]
[ext_resource path="res://textures/Ninjagirl/Idle__003.tex" type="Texture" id=5]
[ext_resource path="res://textures/Ninjagirl/Idle__004.tex" type="Texture" id=6]
[ext_resource path="res://textures/Ninjagirl/Idle__005.tex" type="Texture" id=7]
[ext_resource path="res://textures/Ninjagirl/Idle__006.tex" type="Texture" id=8]
[ext_resource path="res://textures/Ninjagirl/Idle__007.tex" type="Texture" id=9]
[ext_resource path="res://textures/Ninjagirl/Idle__008.tex" type="Texture" id=10]
[ext_resource path="res://textures/Ninjagirl/Idle__009.tex" type="Texture" id=11]
[ext_resource path="res://textures/Ninjagirl/Run__000.tex" type="Texture" id=12]
[ext_resource path="res://textures/Ninjagirl/Run__001.tex" type="Texture" id=13]
[ext_resource path="res://textures/Ninjagirl/Run__002.tex" type="Texture" id=14]
[ext_resource path="res://textures/Ninjagirl/Run__003.tex" type="Texture" id=15]
[ext_resource path="res://textures/Ninjagirl/Run__004.tex" type="Texture" id=16]
[ext_resource path="res://textures/Ninjagirl/Run__005.tex" type="Texture" id=17]
[ext_resource path="res://textures/Ninjagirl/Run__006.tex" type="Texture" id=18]
[ext_resource path="res://textures/Ninjagirl/Run__007.tex" type="Texture" id=19]
[ext_resource path="res://textures/Ninjagirl/Run__008.tex" type="Texture" id=20]
[ext_resource path="res://textures/Ninjagirl/Run__009.tex" type="Texture" id=21]
[ext_resource path="res://textures/Ninjagirl/Jump__005.tex" type="Texture" id=22]
[ext_resource path="res://instances/gui.tscn" type="PackedScene" id=23]
[ext_resource path="res://sounds/bright.wav" type="Sample" id=24]
[ext_resource path="res://sounds/jump.wav" type="Sample" id=25]
[ext_resource path="res://sounds/run.wav" type="Sample" id=26]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.7074
height = 54.2479

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 25.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "walk",
"speed": 25.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": false,
"name": "jump",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 20.4695, 48.5448 )

[sub_resource type="SampleLibrary" id=4]

samples/bright = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 24 )
}
samples/jump = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 25 )
}
samples/run = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 26 )
}

[sub_resource type="SampleLibrary" id=5]

samples/bright = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 24 )
}

[node name="player" type="KinematicBody2D" groups=[
"player",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 2.0
script/script = ExtResource( 1 )
player_speed = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
animation = "walk"
frame = 7
playing = true

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="RayCast2D" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 4.30182 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="gui" parent="CanvasLayer" instance=ExtResource( 23 )]

[node name="player_sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="bright_sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]


